shopping-cart/src/components/Header/Header.module.css
.header {
  background-color: var(--header-color);
  padding-inline: 1rem;
  position: fixed;
  width: 100%;
  z-index: 3;
  padding-block: 2rem;
  color: var(--font-color)
}

.content {
  max-width: 1500px;
  margin-inline: auto;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.headerTitle {
  display: flex;
  align-items: center;
  border-radius: 10px;
}

.header svg {
  width: 3rem;
  height: 3rem;
}

.headerTitle svg {
  width: 4rem;
  height: 4rem;
}

.header path {
  stroke: var(--font-color);
}

.header h1 {
  font-family: 'Rubik Doodle Shadow';
  font-size: 2.5rem;
  margin-inline: 0.5rem;
}

@media (max-width: 600px) {
  .header h1 {
    font-size: 1.4rem;
  }

  .header svg {
    width: 2rem;
    height: 2rem;
  }

}

li {
  list-style: none;
}

.mainNav {
  flex-grow: 1;
}

.mainNav ul {
  display: flex;
  justify-content: space-around;
  align-items: center;
  max-width: 1000px;
  margin-inline: auto;
}

.mainNav a {
  list-style: none;
  cursor: pointer;
  padding: 1rem;
  font-weight: 500;
  text-decoration: none;
  color: var(--font-color);
  transition: 0.1s;
}

.mainNav a:hover,
.mainNav a:focus {
  border-bottom: 5px solid var(--font-color);
}

.mainNav a.active {
  border-bottom: 5px solid var(--font-color);
}

.burger, .exit {
  cursor: pointer;
}

.exit svg {
  fill: var(--font-color);
}

.burger, #bag {
  position: relative;
}

.menu {
  position: absolute;
  top:0;
  left:0;
  width:100vw;
  height: 70vh;
  background-color: var(--header-color);
  color: var(--font-color);
  z-index: 10;
}

.menuTitle {
  display: flex;
  padding-block: 2rem;
  padding-inline: 1rem;
  justify-content: space-around;
}

.menuNav ul {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding-left: 10vw;
  gap: 1rem;
}

.menuNav a {
  list-style: none;
  cursor: pointer;
  padding: 1rem;
  font-weight: 500;
  text-decoration: none;
  color: var(--font-color);
  transition: 0.1s;
}
.menuNav a:hover,
.menuNav a:focus {
  border-left: 5px solid var(--font-color);
}

.menuNav a.active {
  border-left: 5px solid var(--font-color);
}

.counter {
  font-size: 1.1rem;
  font-weight: 500;
  background-color: red;
  width: 25px;
  height: 25px;
  border-radius: 50%;
  display: grid;
  place-content: center;
  color: white;
  position: absolute;
  top: -10px;
  right: -10px;
  opacity: 0;
  transition: opacity 0.3s;
}
.visible {
  opacity: 1;
}

